--- a/css/sistema.css
+++ b/css/sistema.css
@@ -91,7 +91,7 @@
         /* Estilo para o conteúdo principal */
         main {
             max-width: 600px;
-            margin: 15.35% auto;
+            margin: 139px auto;
             padding: 20px;
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
